--- a/index.css
+++ b/index.css
@@ -16,12 +16,13 @@
     /* NAV BAR */
     .nav_flex{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
     }
     .logo{
-        width: 50px;
-        height: 50px;
+        width: 90px;
+        height: 60px;
+    
     }
     .button_flex{
         display: flex;
