--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    border: 1px solid rgb(68, 64, 64);
+    /* font-family: 'Times New Roman', Times, serif; */
     }
     
     body {
@@ -16,8 +16,12 @@
     /* NAV BAR */
     .nav_flex{
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
+        border: 1px solid white;
+
+        
+        
     }
     .logo{
         width: 90px;
@@ -45,7 +49,7 @@
     .tooltip {
         position: relative;
         display: inline-block;
-        border-bottom: 1px dotted black;
+        
       }
       
       .tooltip .tooltiptext {
@@ -90,7 +94,7 @@
        /* Position the sub-tooltip */
        position: fixed;
        top: 6.5%;
-       left: 22.5%;
+       left: 26.4%;
        height: 100vh;
       }
       
@@ -100,10 +104,19 @@
     ul{
         list-style: none;
     }
+
+
+    .button_flex button{
+
+        background: black;
+        color: white;
+        padding: 5px;
+    }
       /* section one style */
     .section_1{
         background-image: url(/images/current-image.jpg);
         height: 400px;
+        border: 1px solid white;
     }
 
     .section_1_text{
@@ -225,5 +238,184 @@ h6{
     font-size: 16px;
 }
 
+.section-6{
+    background-color: aliceblue;
+}
+.section-6 h3{
+    margin: 30px 20px;
+}
+.section-6-flex{
+    display: flex;
+    gap: 14.6%;
+    margin: 20px;
+
+    
+    
+}
+
+.section-6-flex div{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    font-weight: 700;
+    gap:10px;
+
+}
+
+.section-6-flex>div>button{
+    padding: 10px;
+    font-weight: 900;
+    border: 1px solid black;
+}
+
+.section-7, .section-10{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10%;
+    font-size: 32px;
+    font-weight: 700px;
+
+}
+
+.section-7-text, .section-10-text{
+    width: 27%;
+    height: 60%;
+    font-size: 19px;
+    margin-bottom: 5%;
+}
+
+.section-7-text p, .section-10-text p{
+    margin: 20px 0px;
+}
+
+.section-7-text button, .section-9-text button, .section-10-text button{
+    font-size: 16px;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    padding: 10px;
+}
+
+.section-8{
+    text-align: center;
+    background-color: aliceblue;
+    margin: 50px 0px;
+    height: 100px;
+    padding: 50px 0px;
+
+}
 
 
+.section-8-flex{
+    display: flex;
+    justify-content: space-around;
+    gap:100px;
+}
+
+.section-9{
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    
+    
+}
+.section-9-text{
+  width: 30%;
+  font-size: 19px;
+  margin: 5%;
+
+}
+
+footer{
+
+    background-color: black;
+    color: white;
+    padding: 20px;
+    z-index: 0;
+    
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    height: 250px;
+
+    
+    
+    
+}
+
+.footer-div{
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
+
+footer div p{
+    padding-top: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    
+}
+
+.modal-container{
+    display: flex;
+    justify-content:center;
+    margin-top: 5px;
+}
+
+.modal-div{
+    position: relative;
+    margin-top: 4px;
+    z-index: 1;
+    font-size: 14px;
+    
+    
+}
+
+.modal{
+    display: none;
+    position: relative;
+    z-index: 2;
+    color: black;
+    background-color: white;
+    justify-content: flex-start;
+    gap: 20px;
+}
+.ul-div{
+    display: flex;
+     justify-content: space-around;
+     gap:30px;
+     
+
+}
+
+.ul-div li{
+    padding: 10px;
+}
+
+
+.modal-div:hover .modal{
+
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    position:fixed;
+    top: 30%;
+    left: 30%;
+    width: 40%;
+    height: 50%;
+
+}
+
+.english{
+    border:  1px solid black;
+    
+}
+
+
+.copyright{
+    display: flex;
+    justify-content: space-between;
+}
